# databseCRUD

./: build.sh  db.sqlite3  manage.py  pyproject.toml
caregiverCRUD/: asgi.py  settings.py  urls.py  wsgi.py
mainapp/: admin.py  models.py  scheduler.py
mainapp/migrations/: 0001_initial.py
